--- a/blogpost.html
+++ b/blogpost.html
@@ -19,14 +19,15 @@
     <aside class="about">
       <a class="about-img" href="index.html"></a>
       <h1 class="about-name">Yao</h1>
+      <h2 class="about-company">Pierre Fabre Group</h2>
       <p class="about-text">I'm a product manager focusing on front-end development</p>
       <footer class="about-footer">
         <ul>
           <li><a href="https://twitter.com/" target="_blank">
               <div class="twitter"></div>
             </a></li>
-          <li><a href="https://github.com/" target="_blank">
-              <div class="github"></div>
+          <li><a href="https://facebook.com/" target="_blank">
+              <div class="facebook"></div>
             </a></li>
           <li><a href="https://linkedin.com/" target="_blank">
               <div class="linkedin"></div>
